# eus_imitation

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  baxter.rosinstall  fc.rosinstall  fetch.rosinstall  kinova.rosinstall  package.xml  pr2.rosinstall  pr2_test.rviz  prepare.sh  requirements.txt  run_docker.sh  setup.py
config/: config.yaml  image_filter.yaml  octo_config.yaml  panda_config.yaml
config/apriltags/: settings.yaml  tracker_tags.yaml
config/baxter/: init_pose.yaml
config/fetch/: fetch.rviz  init_pose.yaml
config/pr2/: init_pose.yaml  pr2.rviz
data/20230619/rosbags/: rosbag-2.bag
eus_imitation/: CMakeLists.txt  package.xml
eus_imitation_core/: CMakeLists.txt  package.xml
eus_imitation_core/config/fetch/: init_pose.yaml
eus_imitation_core/config/pr2/: init_pose.yaml
eus_imitation_core/euslisp/: baxter-imitation-interface.l  fetch-imitation-interface.l  kinova-imitation-interface.l  main.l  pr2-imitation-interface.l
eus_imitation_core/euslisp/lib/: robot-imitation-interface.l  robot-teaching-interface.l
eus_imitation_core/launch/: robot_control.launch
eus_imitation_core/node_scripts/kinova/: gripper_control.py
eus_imitation_msgs/: CMakeLists.txt  package.xml
eus_imitation_msgs/srv/: RobotIK.srv
eus_imitation_utils/: CMakeLists.txt  package.xml  requirements.txt  setup.py
eus_imitation_utils/config/: hand_calibration.yaml
eus_imitation_utils/config/apriltags/: calib_tags.yaml
eus_imitation_utils/launch/: hand_calibration.launch  hand_joy.launch
eus_imitation_utils/launch/device/: spacenav.launch
eus_imitation_utils/node_scripts/: hand_calibration_node.py  hand_frame_calibration_node.py  rosbag_recorder.py
eus_imitation_utils/src/eus_imitation_utils/: ros_gym_wrapper.py  ros_utils.py
euslisp/: baxter-imitation-interface.l  baxter-spacenav-control.l  baxter-spacenav-interface.l  eus_utils.l  fetch-control-test.l  fetch-control.l  fetch-imitation-interface.l  fetch-spacenav-control.l  fetch-spacenav-interface.l  fetch-test-interface.l  fetch-vive-control.l  fetch-vive-interface.l  init-pose.l  init-pose.l.baxter  init-pose.l.fetch  init-pose.l.fridge  interface-base.l  kinova-control.l  kinova-imitation-interface.l  kinova-spacenav-control.l  main.l  pr2-control-spacenav.l  pr2-control-test.l  pr2-control.backup  pr2-control.l  pr2-imitation-interface.l  pr2-imitation-interface.l.backup  pr2-spacenav-control.l  pr2-spacenav-interface.l  pr2-spacenav.l  pr2-teleop-interface.l  pr2-test-interface.l  pr2-utils.l  pr2-vive-control.l  pr2-vive-interface.l  pr2-vive-main.l  robot-imitation-interface.backup  robot-imitation-interface.l  robot-spacenav-interface.l  robot-teleop-interface.l  (+2 more)
euslisp/backup/: init-pose.l  init-pose.l.cloth  init-pose.l.default  init-pose.l.pick_bread  init-pose.l.video  init-pose.l.video_cloth
euslisp/backup/lib/: reset-pose.l  robot-teleop-interface.l
euslisp/lib/: pr2-control.l  robot-imitation-interface.l  robot-teaching-interface.l  robot-teleop-interface.l
imitator_ros/: CMakeLists.txt  Dockerfile  package.xml  prepare.sh  requirements.txt  run_docker.sh
imitator_ros/examples/: example.l  octo_finetuner.py  tfds_builder.py
imitator_ros/examples/config/: config.yaml  octo_finetune_config.py
imitator_ros/node_scripts/: octo_rollout_node.py
imitator_ros/scripts/: hdf5_reader.py  rosbag2seq_datasets.py
launch/: data_recorder.launch  fetch_data_recorder.launch  hand_calibration.launch  hand_joy.launch  imitation.launch  pr2_control.launch  pr2_data_recorder.launch  robot_control.launch  spacenav.launch  test.launch
launch/device/: spacenav.launch
node_scripts/: backup.py  extract_image_from_rosbag.py  generate_image_datasets.py  gray_scale_pub.py  hand_calibration_node.py  hand_frame_calibration_node.py  hand_joy_node.py  hdf5_reader.py  mono_image_test.py  octo_rollout_node.py  panda_rollout_node.py  policy_execution.py  rollout_node.py  rosbag2datasets.py  rosbag_gray.py  rosbag_recorder.py  rosbag_test.py  test_node.py  test_pyhton.py
node_scripts/kinova/: 03-twist_command.py  gripper_control.py  kinova_control.py  kinova_control.py.backup
python/eus_imitation/: rosbag2datasets.py  rosbag_test.py
python/eus_imitation/base/: base_nets.py  obs_nets.py  policy_nets.py
python/eus_imitation/config/: config.yaml  image_filter.yaml  normalize.yaml
python/eus_imitation/model/: auto.py  autoencoder.py
python/eus_imitation/models/: base_nets.py  policy_nets.py
python/eus_imitation/scripts/: data_loader_tester.py  train.py  vision_trainer.py
python/eus_imitation/test/: dataset_test.py  lstm.py  net_test.py  slot_test.py  vae_train_test.py  vae_vis.py  vis_slot.py
python/eus_imitation/util/: datasets.py  file_utils.py  obs_utils.py  rosbag_utils.py  tensor_utils.py
python/eus_imitation/utils/: datasets.py  file_utils.py  obs_utils.py  rosbag_utils.py  tensor_utils.py  torch_utils.py  train_utils.py
rviz/: hand_calibration.rviz
scripts/: convert_hdf5_to_rlds.py  hdf5_reader.py  ibm_rosbag2seq_dataset.py  inference_check.py  npy_vis.py  octo_check.py  octo_finetuner.py  octo_trainer.py  rosbag2datasets.py  rosbag2img_datasets.py  rosbag2npy.py  rosbag2seq_datasets.py  rosbag2seq_datasets_human_demo.py  spacenavd.sh  test.py  tfds_reader.py
scripts/configs/: dataset_transforms.py  finetune_config.py
scripts/example_dataset/: README.md  checksums.tsv  example_dataset_dataset_builder.py  example_dataset_dataset_builder_test.py
