<?xml version="1.0"?>
<package format="3">
  <name>eus_imitation</name>
  <version>0.0.2</version>
  <description>Metapackage for eus_imitation</description>
  <maintainer email="oh@jsk.imi.i.u-tokyo.ac.jp">Jihoon Oh</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>eus_imitation_core</exec_depend>
  <exec_depend>eus_imitation_msgs</exec_depend>
  <exec_depend>eus_imitation_utils</exec_depend>
  <export>
    <metapackage/>
  </export>
</package>
