<package>

  <name>eus_imitation_msgs</name>
  <version>0.0.2</version>
  <description>The package for eus_imitation msgs</description>

  <maintainer email="oh@jsk.imi.i.u-tokyo.ac.jp">Jihoon Oh</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>jsk_recognition_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>jsk_recognition_msgs</run_depend>
  <run_depend>message_generation</run_depend>

 </package>
